# learn_gfx_rs

./: Cargo.toml  README.md
shaders/: frag.glsl  vert.glsl
src/: buffer_info.rs  drawing.rs  gfx_state.rs  hal_state.rs  image_info.rs  main.rs  pipeline_info.rs  utils.rs  vector.rs  window.rs
